k8s/talos/apps/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  annotations:
    volsync.backube/privileged-movers: "true"
