k8s/talos/apps/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        fsGroup: 911
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          securityContext:
            runAsUser: 911
            runAsGroup: 911
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 9000
            periodSeconds: 20
            failureThreshold: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
