k8s/talos/apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
